--- a/index.html
+++ b/index.html
@@ -256,15 +256,10 @@
         </div>
     </div>
 </section>
-<section>
-    <div class="ofertas_banner">
-        <img src="images/ofertas_del_dia.webp" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
 
-    </div>
-</section>
         <!-- Product Catalog -->
 <section class="catalog">
-    <h2>Descuentos de hasta el 25% al contado en los siguientes productos seleccionados:</h2>
+    <h2>Destacados del mes</h2>
     <div class="product-grid">
         <!-- Las tarjetas se generarán con JavaScript -->
     </div>
@@ -393,7 +388,6 @@ const productGrid = document.querySelector('.product-grid');
 productGrid.innerHTML = '';
 const productosDestacadosFiltrados = productos
     .filter(producto => productosDestacados.includes(producto.codigo))
-    
 
 productosDestacados.forEach(codigo => {
     if (!productos.some(producto => producto.codigo === codigo)) {
