banner ofertas del dia

--- a/index.html
+++ b/index.html
@@ -258,8 +258,11 @@
 </section>
 
         <!-- Product Catalog -->
+<!-- Product Catalog -->
 <section class="catalog">
-    <h2>Destacados del mes</h2>
+    <div class="catalog-header">
+        <img src="images/ofertas_del_dia.webp" alt="Ofertas del Día" class="catalog-banner" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+    </div>
     <div class="product-grid">
         <!-- Las tarjetas se generarán con JavaScript -->
     </div>
