--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Climatizacion&subcategoria=Aires+acondicionados">
                             <img class="home-categories-img" src="images/owl_carrusel/4173289_f-removebg-preview.png" alt="Aires acondicionados">
-                            <div class="home-categories-name">Aires acondicinados</div>
+                            <div class="home-categories-name">Aires acondicionados</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
