--- a/producto.html
+++ b/producto.html
@@ -107,12 +107,11 @@
             </ul>
         </li>
         <li class="has-submenu">
-            <a href="categoria.html?nombre=Termotanques">Termotanques<br>y calefones</a>
+            <a href="categoria.html?nombre=Termotanques y calefones">Termotanques<br>y calefones</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Termotanques&subcategoria=Gas">Gas</a></li>
-                <li><a href="categoria.html?nombre=Termotanques&subcategoria=Eléctrico">Eléctrico</a></li>
-                <li><a href="categoria.html?nombre=Termotanques&subcategoria=Dual">Dual</a></li>
-                <li><a href="categoria.html?nombre=Termotanques&subcategoria=Calefones">Calefones</a></li>
+                
+                <li><a href="categoria.html?nombre=Termotanques y calefones&subcategoria=Termotanques">Termotanques</a></li>
+                <li><a href="categoria.html?nombre=Termotanques y calefones&subcategoria=Calefones">Calefones</a></li>
             </ul>
         </li><li class="has-submenu">
             <a href="categoria.html?nombre=Pequeños">Pequeños<br>electrodomésticos</a>
