--- a/categoria.html
+++ b/categoria.html
@@ -295,6 +295,7 @@ const atributosPorCategoria = {
         "Encendido eléctrico",
         "Válvula de seguridad",
         "Luz en el horno",
+        "Rejillas de fundición",
         "Hornallas"
     ],
     "heladeras": [
