--- a/admin.html
+++ b/admin.html
@@ -99,14 +99,15 @@ const categoryFields = {
         subcategorias: [],
         folder: "cocinas",
         fields: [
-            { label: "Tipo de uso", name: "tipo_uso", type: "select", options: ["Domestica", "Industrial"] },
+            { label: "Tipo de uso", name: "tipo_uso", type: "select", options: ["Doméstico", "Industrial"] },
             { label: "Dimensiones (Alt x Anc x Pro)", name: "dimensiones", type: "text", placeholder: "85 x 56 x 60" },
             { label: "Válvula de seguridad", name: "valvula_seguridad", type: "select", options: ["Sí", "No"] },
             { label: "Luz en el horno", name: "luz_horno", type: "checkbox" }, // Changed to checkbox
             { label: "Encendido eléctrico", name: "encendido_electrico", type: "checkbox" }, // Changed to checkbox
             { label: "Timer", name: "timer", type: "checkbox" }, // New checkbox field
-            { label: "Tipo de gas", name: "tipo_gas", type: "text", placeholder: "Multigas" },
-            { label: "Eficiencia energética", name: "eficiencia", type: "text", placeholder: "Clase A" }
+            { label: "Rejillas de fundición", name: "rejillas_de_fundicion", type: "checkbox" }, // New checkbox field
+            { label: "Tipo de gas", name: "tipo_gas", type: "select", options: ["Envasado", "Natural", "Multigas","Eléctrico"] },
+            { label: "Eficiencia energética", name: "eficiencia", type: "select", options: ["Clase A", "Clase B", "Clase C"] }
         ]
     },
     "Heladeras": {
