--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                 <img src="images/banner_termot_y_calefones.webp" alt="Banner termotanques y calefones" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/HeladeraSamsungRT42_cuota_simple.webp" alt="Heladera Samsung RT42" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="images/televisores_ofertas_aoc.jpg" alt="Televisores oferta AOC" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/kohinoor_banner.webp" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/HeladeraSamsungRT42_cuota_simple.webp" alt="Heladera Samsung RT42" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
                 <img src="carrusel/pava_noulinex_cuota_simple.webp" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
