--- a/index.html
+++ b/index.html
@@ -165,10 +165,13 @@
                 <img src="images/televisores_ofertas_aoc.jpg" alt="Televisores oferta AOC" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/HeladeraSamsungRT42_cuota_simple.webp" alt="Heladera Samsung RT42" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/lavado_perfecto_1.jpg" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/pava_noulinex_cuota_simple.webp" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="carrusel/lavado_perfecto_2.jpg" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+            </div>
+            <div class="slide">
+                <img src="carrusel/HeladeraSamsungRT42_cuota_simple.webp" alt="Heladera Samsung RT42" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
                 <img src="carrusel/Lavarropas_BGH.webp" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
@@ -186,6 +189,7 @@
             <span class="indicator" data-slide="6"></span>
             <span class="indicator" data-slide="7"></span>
             <span class="indicator" data-slide="8"></span>
+            <span class="indicator" data-slide="9"></span>
         </div>
     </div>
 </section>
