--- a/producto.html
+++ b/producto.html
@@ -62,7 +62,13 @@
             </div>
             <nav class="nav-menu" id="nav-menu">
     <ul>
-        <li><a href="categoria.html?nombre=Cocinas">Cocinas</a></li>
+        <li class="has-submenu">
+            <a href="categoria.html?nombre=Cocinas y anafes">Cocinas y<br>anafes</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Cocinas y anafes&subcategoria=Cocinas">Cocinas</a></li>
+                <li><a href="categoria.html?nombre=Cocinas y anafes&subcategoria=Anafes">Anafes</a></li>
+            </ul>
+        </li>
         <li><a href="categoria.html?nombre=Heladeras">Heladeras</a></li>
         <li class="has-submenu">
             <a href="categoria.html?nombre=Tv y audio">Tv y Audio</a>
@@ -126,6 +132,7 @@
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=Sandwicheras">Sandwicheras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=Picadoras">Picadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Aspiradoras">Aspiradoras</a></li>
             </ul>
         </li>
         <li class="has-submenu">
