--- a/categoria.html
+++ b/categoria.html
@@ -294,7 +294,8 @@ const atributosPorCategoria = {
         "Inverter",
         "Tipo"
     ],
-    "cocinas": [
+    "cocinas y anafes": [
+        "Tipo",    
         "Tipo de uso",
         "Dimensiones",
         "Material",
@@ -304,6 +305,7 @@ const atributosPorCategoria = {
         "Luz en el horno",
         "Rejillas de fundición",
         "Hornallas"
+        
     ],
     "heladeras": [
         "Dimensiones",
